--- a/src/components/carousel.pug
+++ b/src/components/carousel.pug
@@ -33,7 +33,7 @@ mixin carousel-1()
                                 .course__content 
                                     .course__item
                                         p.course__item-title Возраст
-                                        p.course__item-p от 10 лет
+                                        p.course__item-p от 5 лет
                                     .course__item
                                         p.course__item-title Длительность курса
                                         p.course__item-p 8-64 урока
@@ -51,13 +51,13 @@ mixin carousel-1()
                                 .course__content 
                                     .course__item
                                         p.course__item-title Возраст
-                                        p.course__item-p от 10 лет
+                                        p.course__item-p от 14 лет
                                     .course__item
                                         p.course__item-title Длительность курса
                                         p.course__item-p 8-64 урока
                                     .course__item
                                         p.course__item-title Уровень
-                                        p.course__item-p Начальный
+                                        p.course__item-p Средний
                                 .carousel__bot
                                     a(href="course.html").btn_2.carousel__btn Узнать продробнее 
 
@@ -78,13 +78,13 @@ mixin carousel-2()
                                 .course__content 
                                     .course__item
                                         p.course__item-title Возраст
-                                        p.course__item-p от 10 лет
+                                        p.course__item-p от 12 лет
                                     .course__item
                                         p.course__item-title Длительность курса
                                         p.course__item-p 8-64 урока
                                     .course__item
                                         p.course__item-title Уровень
-                                        p.course__item-p Начальный
+                                        p.course__item-p Средний
                                 .carousel__bot
                                     a(href="course.html").btn_2.carousel__btn Узнать продробнее 
                             .swiper-slide.carousel__item
@@ -96,13 +96,13 @@ mixin carousel-2()
                                 .course__content 
                                     .course__item
                                         p.course__item-title Возраст
-                                        p.course__item-p от 10 лет
+                                        p.course__item-p от 14 лет
                                     .course__item
                                         p.course__item-title Длительность курса
                                         p.course__item-p 8-64 урока
                                     .course__item
                                         p.course__item-title Уровень
-                                        p.course__item-p Начальный
+                                        p.course__item-p Средний
                                 .carousel__bot
                                     a(href="course.html").btn_2.carousel__btn Узнать продробнее 
                             .swiper-slide.carousel__item
@@ -114,13 +114,13 @@ mixin carousel-2()
                                 .course__content 
                                     .course__item
                                         p.course__item-title Возраст
-                                        p.course__item-p от 10 лет
+                                        p.course__item-p от 12 лет
                                     .course__item
                                         p.course__item-title Длительность курса
                                         p.course__item-p 8-64 урока
                                     .course__item
                                         p.course__item-title Уровень
-                                        p.course__item-p Начальный
+                                        p.course__item-p Средний
                                 .carousel__bot
                                     a(href="course.html").btn_2.carousel__btn Узнать продробнее 
 mixin carousel-3()
@@ -140,7 +140,7 @@ mixin carousel-3()
                                 .course__content 
                                     .course__item
                                         p.course__item-title Возраст
-                                        p.course__item-p от 10 лет
+                                        p.course__item-p от 12 лет
                                     .course__item
                                         p.course__item-title Длительность курса
                                         p.course__item-p 8-64 урока
@@ -158,12 +158,12 @@ mixin carousel-3()
                                 .course__content 
                                     .course__item
                                         p.course__item-title Возраст
-                                        p.course__item-p от 10 лет
+                                        p.course__item-p от 14 лет
                                     .course__item
                                         p.course__item-title Длительность курса
                                         p.course__item-p 8-64 урока
                                     .course__item
                                         p.course__item-title Уровень
-                                        p.course__item-p Начальный
+                                        p.course__item-p Средний
                                 .carousel__bot
                                     a(href="course.html").btn_2.carousel__btn Узнать продробнее 
