--- a/src/components/how.pug
+++ b/src/components/how.pug
@@ -5,4 +5,4 @@ mixin how()
                 h2.how__title Как проходит урок?
                 p.how__p Все уроки мы проводим онлайн. Можно заниматься, где удобно — дома, на отдыхе, на даче у бабушки. Нужен только стабильный доступ к Интернету. 
                 .how__img.gif 
-                    img(src="@img/roblox-course.gif", alt="" draggable="false")
+                    img(src="@img/videourok.gif", alt="" draggable="false")
