--- a/src/components/sign.pug
+++ b/src/components/sign.pug
@@ -9,12 +9,13 @@ mixin sign()
                         select
                             option(value="0").sign__option Выберете курс 
                             option(value="1").sign__option Хочу проконсультироваться по этому вопросу
-                            option(value="2").sign__option Основы программирования на Python
-                            option(value="3").sign__option Создание игр в Roblox Studio
+                            option(value="2").sign__option Создание игр в Roblox Studio
+                            option(value="3").sign__option 3D-моделирование в Blender
                             option(value="4").sign__option Создание игр и мультфильмов в Scratch
-                            option(value="5").sign__option Web-design: создание сайтов на HTML/CSS/JavaScript
-                            option(value="6").sign__option 3D-моделирование
-                            option(value="").sign__option Создание игр в Unity
+                            option(value="5").sign__option Создание сайтов и Web-Disign
+                            option(value="6").sign__option Основы программирования на Python
+                            option(value="7").sign__option Создание игр в Unity
+                            option(value="7").sign__option Разработка приложений на Android
                     input(type="text" placeholder="Ваше имя" required).sign__input
                     input(type="email" placeholder="Почта" required).sign__input
                     input(type="text" placeholder="+7 (___) ___-__-__" required).sign__input
