--- a/src/components/sign.pug
+++ b/src/components/sign.pug
@@ -22,6 +22,6 @@ mixin sign()
                     button(type="submit").sign__btn Оставить заявку
                 .sign__span Оставляя заявку, вы принимаете оферту, условия договора на оказание услуг и политики обработки пресональных данных.
             .sign__img 
-                img(src="@img/rocket.svg", alt="" draggable="false")
+                img(src="@img/rocket.png", alt="" draggable="false")
             .sign__img.sm
-                img(src="@img/rocket-sm.png", alt="" draggable="false")
+                img(src="@img/rocket.png", alt="" draggable="false") 
